# rs-sage-core

./: .gitignore  CROSS_COMPILATION_TODO.md  Cargo.toml  Makefile  README.md  build.rs  deny.toml  sage-crypto-core.rb  sage-crypto-core.spec
.cargo/: config.toml
.github/: CODEOWNERS  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
benches/: crypto_benchmarks.rs
debian/: changelog  control  rules
docs/api/: README.md
docs/integrations/: python.md
examples/ffi/: Makefile  basic.c
examples/python/: basic_usage.py
examples/wasm/: advanced.html  index.html  package.json
installer/windows/: build.ps1  sage-crypto-core.wxs
pkg/: README.md  package.json
scripts/: build-all.sh  install-deps.sh
src/: error.rs  lib.rs
src/crypto/: ed25519.rs  keys.rs  mod.rs  secp256k1.rs  signature.rs
src/ffi/: formats.rs  http.rs  keypair.rs  mod.rs  signature.rs  utils.rs
src/formats/: mod.rs
src/rfc9421/: canonicalize.rs  components.rs  mod.rs  signer.rs  verifier.rs
src/wasm/: formats.rs  http.rs  keypair.rs  mod.rs  signature.rs  utils.rs
tests/: edge_cases.rs  integration_test.rs  rfc9421_compliance.rs  security_tests.rs
